# wallet

./: .gitignore  CHANGELOG.md  CLAUDE.md  NotesNotDelivered.md  README.md  capacitor.config.ts  confirm.html  desktop.html  fullpage.html  jest.config.ts  jest.setup.js  lefthook.yml  mobile.html  offscreen.html  options.html  package.json  playwright.android.config.ts  playwright.config.ts  playwright.e2e.config.ts  playwright.ios.config.ts  playwright.stress.config.ts  popup.html  postcss.config.js  sidepanel.html  tailwind.config.js  tailwind.config.ts  tsconfig.json  vite.background.config.ts  vite.contentScripts.config.ts  vite.desktop.config.ts  vite.extension.config.ts  vite.mobile.config.ts  webpack.config.js  webpack.desktop.config.js  webpack.html.config.js  webpack.mobile.config.js  webpack.public.config.js
__mocks__/: wasmMock.js
android/: capacitor.settings.gradle
docs/: ios-cdp-bridge.md
patches/: @capgo+inappbrowser+8.0.6.patch  README.md  eslint-plugin-import+2.32.0.patch  eslint-plugin-react+7.27.1.patch  inspect-cli-cdp-fix.patch
public/: confirm.html  desktop.html  fullpage.html  globals.js  manifest.json  manifest.v2.json  mobile.html  options.html  popup.html  sidepanel.html  sw.js
scripts/: dev-with-web-sdk-pr.sh  fetch-dapp-icons.mjs
src/: background-entry.ts  background.ts  confirm.tsx  desktop-app.tsx  fullpage.tsx  main.css  mobile-app.tsx  options.tsx  popup.tsx  react-app.d.ts  sidepanel.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: dapp_browser.rs  tray.rs
src/app/: App.tsx  (+6 more)
stress-test/: fixtures.ts  helpers.ts  (+1 more)
(+606 files in other folders)
