[package]
name = "miden-wallet"
version = "1.1.6"
description = "Bread Desktop Application"
authors = ["Demox Labs"]
license = "MIT"
repository = "https://github.com/demox-labs/miden-wallet"
edition = "2021"

[lib]
name = "miden_wallet_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
base64 = "0.22"
thiserror = "1"
url = "2"
urlencoding = "2"

# macOS: Secure Enclave via Security.framework
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = { version = "2", features = ["OSX_10_15"] }
security-framework-sys = "2"
core-foundation = "0.9"
core-foundation-sys = "0.8"

# Windows: TPM via Windows CNG APIs
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Security_Cryptography",
    "Win32_Security_Credentials",
    "Win32_Foundation",
    "Win32_System_Memory"
] }

# Single instance plugin (desktop only)
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
